docs: added the `@types/cryptr` information for type definitions for cryptr
As the new releases, we need these type definitions, so updated the tutorial instruction and added a command to install it

--- a/src/docs/5.29.x/headless-cms/extending/custom-field-type.mdx
+++ b/src/docs/5.29.x/headless-cms/extending/custom-field-type.mdx
@@ -280,6 +280,8 @@ To install it, we can run the following command from our project root:
 
 ```bash
 yarn workspace api-headless-cms add cryptr
+
+yarn workspace api-headless-cms add @types/cryptr
 ```
 
 <Alert type="info">
