Updated the way plugins are imported from the packages

--- a/src/docs/5.30.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.30.x/headless-cms/extending/content-models-via-code.mdx
@@ -53,8 +53,7 @@ Both plugins can be defined within a single file.
 Let's create a [`models.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/content-model-plugins/basic/api/code/headlessCMS/src/plugins/models.ts) file in the `api/headlessCMS/src/plugins` directory.
 
 ```ts apps/api/headlessCMS/src/plugins/models.ts
-import { CmsModelPlugin } from "@webiny/api-headless-cms/plugins/CmsModelPlugin";
-import { CmsGroupPlugin } from "@webiny/api-headless-cms/plugins/CmsGroupPlugin";
+import { CmsGroupPlugin, CmsModelPlugin } from "@webiny/api-headless-cms";
 
 export default [
   // Defines a new "E-Commerce" content models group.
@@ -269,9 +268,8 @@ And you should be able to see the following Product model.
 In this example, we show how we can define content models and content model groups only for a specific locale, in our case, the `en-US`.
 
 ```ts apps/api/headlessCMS/src/plugins/models.ts
-import { CmsModelPlugin } from "@webiny/api-headless-cms/plugins/CmsModelPlugin";
-import { CmsGroupPlugin } from "@webiny/api-headless-cms/plugins/CmsGroupPlugin";
-import { ContextPlugin } from "@webiny/handler/plugins/ContextPlugin";
+import { CmsGroupPlugin, CmsModelPlugin } from "@webiny/api-headless-cms";
+import { ContextPlugin } from "@webiny/handler";
 import { CmsContext } from "@webiny/api-headless-cms/types";
 
 export default [
@@ -306,9 +304,8 @@ In Admin Area, user's current local is sent with every issued HTTP request, via 
 In this example, we show how we can define content models and content model groups only for a specific tenant, in our case, the `root`.
 
 ```ts apps/api/headlessCMS/src/plugins/models.ts
-import { CmsModelPlugin } from "@webiny/api-headless-cms/plugins/CmsModelPlugin";
-import { CmsGroupPlugin } from "@webiny/api-headless-cms/plugins/CmsGroupPlugin";
-import { ContextPlugin } from "@webiny/handler/plugins/ContextPlugin";
+import { CmsGroupPlugin, CmsModelPlugin } from "@webiny/api-headless-cms";
+import { ContextPlugin } from "@webiny/handler";
 import { CmsContext } from "@webiny/api-headless-cms/types";
 
 export default [
