--- a/src/docs/5.30.x/headless-cms/extending/custom-field-type.mdx
+++ b/src/docs/5.30.x/headless-cms/extending/custom-field-type.mdx
@@ -296,7 +296,7 @@ As a first step, we will encrypt data before storing it in the database.
 Create a file [`secretTextFieldStoragePlugin.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/custom-field-plugin/api/secretTextFieldStoragePlugin.ts) in `apps/api/headlessCMS/src/fields/secretText` directory.
 
 ```ts apps/api/headlessCMS/src/fields/secretText/secretTextFieldStoragePlugin.ts
-import { StorageTransformPlugin } from "@webiny/api-headless-cms/plugins/storage/StorageTransformPlugin";
+import { StorageTransformPlugin } from "@webiny/api-headless-cms";
 import cryptr from "cryptr";
 
 const plugin = new StorageTransformPlugin({
