wip: create 5.32.0 docs

--- a/src/docs/shared/release-notes/5.32.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.32.0/changelog.mdx
@@ -16,9 +16,23 @@ When running the [`webiny watch`](/docs/{version}/core-development-concepts/basi
 
 With this release, the redundant URL won't be appearing anymore. 
 
+### Destroy Command Now Works Even If the Project Wasn't Previously Deployed
+
+With this release, we've fixed an issue with the [`webiny destroy`](/docs/{version}/infrastructure/basics/destroy-cloud-infrastructure) command, where, in order for it to work correctly, a Webiny project application had to be previously deployed.
+
+This is no longer the case. A Webiny project application doesn't need to be previously deployed in order for the command to work.
+
+Thanks goes to [@ryohei-kamiya](https://github.com/ryohei-kamiya) for discovering this issue! ❤️      
+
+<Alert type="info" title="Project Applications">
+
+Learn more about project applications and project organization in general, in the [Project Applications and Packages](../../core-development-concepts/project-organization/project-applications-and-packages) key topic.
+
+</Alert>
+
 ### CI/CD Scaffold - Workflow Files Are Now Correctly Deployed ([#2601](https://github.com/webiny/webiny-js/pull/2601))
 
-Prior to this PR, upon using the [CI/CD scaffold](/docs/{version}/core-development-concepts/ci-cd/setup), the designated GitHub Actions workflow files would not be correctly generated in developer's GitHub repository. 
+Prior to this release, upon using the [CI/CD scaffold](/docs/{version}/core-development-concepts/ci-cd/setup), the designated GitHub Actions workflow files would not be correctly generated in developer's GitHub repository. 
 
 This has now been addressed, so all of the GitHub Actions workflow files should be generated correctly.
 
