wip: create 5.32.0 docs

--- a/src/docs/shared/release-notes/5.32.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.32.0/changelog.mdx
@@ -36,7 +36,7 @@ Prior to this release, upon using the [CI/CD scaffold](/docs/{version}/core-deve
 
 This has now been addressed, so all of the GitHub Actions workflow files should be generated correctly.
 
-### Watch Command - Add `hook-before-watch` Hook ([#2607](https://github.com/webiny/webiny-js/pull/2607))
+### Watch Command - Introduced `hook-before-watch` Lifecycle Event ([#2607](https://github.com/webiny/webiny-js/pull/2607))
 
 We've introduced the new `hook-before-watch` lifecycle event to the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command. 
 
