wip: create 5.32.0 docs

--- a/src/docs/shared/release-notes/5.32.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.32.0/changelog.mdx
@@ -32,9 +32,9 @@ Learn more about project applications and project organization in general, in th
 
 ### CI/CD Scaffold - Workflow Files Are Now Correctly Deployed ([#2601](https://github.com/webiny/webiny-js/pull/2601))
 
-Prior to this release, upon using the [CI/CD scaffold](/docs/{version}/core-development-concepts/ci-cd/setup), the designated GitHub Actions workflow files would not be correctly generated in developer's GitHub repository. 
+Prior to this release, upon using the [CI/CD scaffold](/docs/{version}/core-development-concepts/ci-cd/setup), the GitHub Actions workflow files would not be correctly generated in developer's GitHub repository. 
 
-This has now been addressed, so all of the GitHub Actions workflow files should be generated correctly.
+This has now been addressed. All of the GitHub Actions workflow files should be generated correctly.
 
 ### Watch Command - Introduced the `hook-before-watch` Lifecycle Event ([#2607](https://github.com/webiny/webiny-js/pull/2607))
 
