--- a/src/docs/5.32.x/infrastructure/basics/build-and-deploy-hooks.mdx
+++ b/src/docs/5.32.x/infrastructure/basics/build-and-deploy-hooks.mdx
@@ -95,11 +95,12 @@ export default {
 
 ## Watch Command Hooks
 
-Except for the [`webiny deploy`](/docs/{version}/how-to-guides/deployment/deploy-your-project/) command, hooking onto key lifecycle events is also supported by the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command. 
+Except for the [`webiny deploy`](/docs/{version}/how-to-guides/deployment/deploy-your-project/) command, hooking onto key lifecycle events is also supported by the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command.
 
 At the moment, via the `hook-before-watch` lifecycle event, we can perform additional steps once the command has been initialized, which is demonstrated by the following code:
+
 ```ts webiny.project.ts
-// Some of the code is removed for brevity.
+// Some code is removed for brevity.
 
 export default {
   name: "your-project",
@@ -117,7 +118,6 @@ export default {
   }
 };
 ```
-
 
 ## FAQ
 
