--- a/src/docs/shared/release-notes/5.10.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.10.0/upgrade-guide.mdx
@@ -62,7 +62,7 @@ The upgrade script will make a couple of changes to your existing **API** projec
 
 ## 4. Deploy Your Project
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
