--- a/src/docs/shared/release-notes/5.11.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.11.0/upgrade-guide.mdx
@@ -51,7 +51,7 @@ Once the upgrade command has finished, you can run the [`git status`](https://gi
 
 ## 3. Deploy Your Project
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
@@ -84,7 +84,7 @@ As mentioned in the [changelog](/docs/{version}/release-notes/5.11.0/changelog),
 
 In terms of existing projects and upgrading, there shouldn't be any major changes or extra steps that you'll need to perform. But, there are a couple of things to have in mind.
 
-Once you've run the above shown `webiny upgrade` command, the existing Pulumi CLI should automatically be removed from your project. And, upon re-deploying your Webiny project (using the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) command), the new Pulumi CLI should be downloaded and installed, again automatically.
+Once you've run the above shown `webiny upgrade` command, the existing Pulumi CLI should automatically be removed from your project. And, upon redeploying your Webiny project (using the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) command), the new Pulumi CLI should be downloaded and installed, again automatically.
 
 Furthermore, during the first deployment, in case you didn't make any changes that would affect the deployment, you should only see a change in `provider` for each cloud infrastructure resource:
 
