--- a/src/docs/shared/release-notes/5.16.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.16.0/upgrade-guide.mdx
@@ -57,7 +57,7 @@ Once the upgrade command has finished, you can run the [`git status`](https://gi
 
 ## 3. Deploy Your Project
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
