--- a/src/docs/shared/release-notes/5.18.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.18.0/upgrade-guide.mdx
@@ -51,7 +51,7 @@ If you'd like to learn more about the most important changes that the upgrade pr
 
 ## 3. Deploy Your Project
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
