--- a/src/docs/shared/release-notes/5.22.1/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.22.1/upgrade-guide.mdx
@@ -30,7 +30,7 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 
 ## 2. Deploy Your Project
 
-Proceed by re-deploying your Webiny project:
+Proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
