--- a/src/docs/shared/release-notes/5.24.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.24.0/upgrade-guide.mdx
@@ -37,7 +37,7 @@ To minimize the impact of TS strictness, we are _NOT CHANGING_ your existing `ts
 
 ## 2. Deploy Your Project
 
-Proceed by re-deploying your Webiny project:
+Proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
