--- a/src/docs/shared/release-notes/5.27.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.27.0/upgrade-guide.mdx
@@ -35,7 +35,7 @@ Before moving on, make sure you commit all your changes.
 
 ## 2. Deploy Your Project
 
-Proceed by re-deploying your Webiny project:
+Proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
