--- a/src/docs/shared/release-notes/5.32.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.32.0/upgrade-guide.mdx
@@ -27,29 +27,9 @@ yarn up "@webiny/*@5.32.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.32.0`.
 
-<Alert type="info">
+## 2. Deploy Your Project
 
-Before moving on, make sure you commit all your changes.
-
-</Alert>
-
-## 2. Run the Upgrade Command
-
-The next step is to run the project upgrade:
-
-```bash
-yarn webiny upgrade
-```
-
-<Alert type="warning">
-  If the upgrade command ends in error "<strong>Script does not exist.</strong>", please clear your
-  npx cache. You can run <strong>npx clear-npx-cache</strong> to clear it, or just delete it
-  manually from your npx directory.
-</Alert>
-
-## 3. Deploy Your Project
-
-Proceed by re-deploying your Webiny project:
+Proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
