--- a/src/docs/shared/release-notes/5.8.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.8.0/upgrade-guide.mdx
@@ -53,7 +53,7 @@ Before running the `webiny upgrade` command, we recommend that you commit any ac
 
 ## 3. Deploy Your Project and Finish the Upgrade in the Webiny Admin Area
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
