--- a/src/docs/shared/release-notes/5.9.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.9.0/upgrade-guide.mdx
@@ -71,7 +71,7 @@ This takes care of a small glitch in the upgrade process, which we noticed _afte
 
 ## 5. Deploy Your Project
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
