--- a/src/docs/shared/release-notes/5.17.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.17.0/upgrade-guide.mdx
@@ -79,7 +79,7 @@ Before moving on to the next step, review the changes in your IDE, and remove th
 
 ## 5. Deploy Your Project
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
