--- a/src/docs/shared/release-notes/5.20.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.20.0/upgrade-guide.mdx
@@ -41,7 +41,7 @@ Before moving on, make sure you commit all your changes.
 
 ## 2. Deploy Your Project
 
-Finally, proceed by re-deploying your Webiny project:
+Finally, proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
