--- a/src/docs/shared/release-notes/5.28.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.28.0/upgrade-guide.mdx
@@ -43,7 +43,7 @@ yarn webiny upgrade
 
 ## 3. Deploy Your Project
 
-Proceed by re-deploying your Webiny project:
+Proceed by redeploying your Webiny project:
 
 ```bash
 # Execute in your project root.
