feat: create Webiny `5.32.0` docs
* wip: add changelog for 5.32.0

* wip: create 5.32.0 docs

* wip: create 5.32.0 docs

* wip: create 5.32.0 docs

* wip: create 5.32.0 docs

* wip: create 5.32.0 docs

* update changelog

Co-authored-by: Pavel Denisjuk <pavel@webiny.com>

--- a/src/docs/shared/release-notes/5.32.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.32.0/upgrade-guide.mdx
@@ -1,19 +1,19 @@
 ---
-title: Upgrade from 5.25.0 to 5.26.0
-description: Learn how to upgrade Webiny from 5.25.0 to 5.26.0.
+title: Upgrade from 5.31.0 to 5.32.0
+description: Learn how to upgrade Webiny from 5.31.0 to 5.32.0.
 ---
 
 import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What you’ll learn">
 
-- how to upgrade Webiny from 5.25.0 to 5.26.0
+- how to upgrade Webiny from 5.31.0 to 5.32.0
 
 </Alert>
 
 <Alert type="info">
 
-Make sure to check out the [5.26.0 changelog](./changelog) to get familiar with the changes introduced in this release.
+Make sure to check out the [5.32.0 changelog](./changelog) to get familiar with the changes introduced in this release.
 
 </Alert>
 
@@ -22,26 +22,12 @@ Make sure to check out the [5.26.0 changelog](./changelog) to get familiar with 
 Upgrade all `@webiny/*` packages by running the following command:
 
 ```bash
-yarn up "@webiny/*@5.26.0"
+yarn up "@webiny/*@5.32.0"
 ```
 
-Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.26.0`.
+Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.32.0`.
 
-<Alert type="info">
-
-Before moving on, make sure you commit all your changes.
-
-</Alert>
-
-## 2. Run the Upgrade Command
-
-The next step is to run the project upgrade:
-
-```bash
-yarn webiny upgrade
-```
-
-## 3. Deploy Your Project
+## 2. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
@@ -49,6 +35,12 @@ Proceed by redeploying your Webiny project:
 # Execute in your project root.
 yarn webiny deploy --env {environment}
 ```
+
+<Alert type="warning">
+
+Make sure you deploy the entire system using the command shown above! You have to deploy all apps before using the system. Partial deploys may cause the upgrade to be applied incorrectly.
+
+</Alert>
 
 <Alert type="warning">
 
