wip(headless-cms): upgrading existing model definitions

--- a/src/docs/shared/release-notes/5.33.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.33.0/changelog.mdx
@@ -7,4 +7,11 @@ description: See what's new in Webiny version 5.33.0.
 
 ## Headless CMS
 
-### Model Field Aliases [#2611](https://github.com/webiny/webiny-js/pull/2611)
+### CMS Model Field Aliases [#2611](https://github.com/webiny/webiny-js/pull/2611)
+
+Starting from 5.33.0 we introduced `aliases` for the CMS Model Fields.
+
+We are now allowing our users to change the `Field ID` (`fieldId`) property of the CMS Model Field definition, which serves as the field identifier in the GraphQL API and in the code.
+As the `Field ID` property is now changeable, we needed another property to identify the field in the database, so we introduced the `Storage ID` (`storageId`) property.
+
+If you have existing CMS Models defined via plugins, please read [this](/docs/headless-cms/extending/content-models-via-code-storage-id) article before you start the upgrade .
