--- a/src/docs/shared/release-notes/5.33.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.33.0/upgrade-guide.mdx
@@ -27,7 +27,20 @@ yarn up "@webiny/*@5.33.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.33.0`.
 
-## 2. Deploy Your Project
+## 2. Upgrading CMS Models Via Code Definitions 
+
+<Alert type="info">
+
+If you do not have CMS Models defined via code (via `CmsModelPlugin`), you can skip this step.
+
+</Alert>
+
+Since we introduced a new property, `storageId`, into CMS Model Field definition, you must add it to your existing CMS Model Field definitions.
+This is only for the CMS models which are created prior to the 5.33.0.
+Please follow [this](/docs/headless-cms/extending/content-models-via-code-storage-id) article.
+
+
+## 3. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
@@ -42,7 +55,7 @@ Make sure you deploy the entire system using the command shown above! You have t
 
 </Alert>
 
-## 3. Upgrade in the Admin Area
+## 4. Upgrade in the Admin Area
 
 There is a database upgrade that we execute from the Admin Area. To make sure it starts, clear your browser cache and log in.
 
